--- a/index.html
+++ b/index.html
@@ -32,6 +32,16 @@
     <link rel="icon" type="image/png" sizes="32x32" href="images/icons/icon-96x96.png">
     <link rel="icon" type="image/png" sizes="16x16" href="images/icons/icon-72x72.png">
     <link rel="manifest" href="/manifest.json">
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-PNWV6FW36J"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-PNWV6FW36J');
+    </script>
 </head>
 
 
