--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-PNWV6FW36J"></script>
     <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
 
-      gtag('config', 'G-PNWV6FW36J');
+        gtag('config', 'G-PNWV6FW36J');
     </script>
 </head>
 
@@ -130,16 +130,22 @@
 
                     <div class="intro-block-content__text-wrap">
                         <p class="intro-block-content__text">
+                            I'm Ho-67 on Github <br>
                             Frontend Developer <br>
-                            Web Designer
+                            Web Designer <br>
                         </p>
 
-                        <!-- <ul class="intro-block-content__social">
-                            <li><a href="#0">FB</a></li>
-                            <li><a href="#0">IG</a></li>
-                            <li><a href="#0">PI</a></li>
-                            <li><a href="#0">X</a></li>
-                        </ul> -->
+                        <ul class="intro-block-content__social">
+                            <li>
+                                <div class="intro-block-content__social-item">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                                        <path fill="currentColor"
+                                            d="M22 6c0-1.1-.9-2-2-2H4c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2zm-2 0l-8 5l-8-5zm0 12H4V8l8 5l8-5z" />
+                                    </svg>
+                                    &nbsp;mistynina11@gmail.com
+                                </div>
+                            </li>
+                        </ul>
                     </div> <!-- end intro-pic-secondary -->
 
                 </div> <!-- end intro-block-content -->
@@ -196,8 +202,11 @@
                         <br>
                         <br>
                         對於程式開發充滿熱忱，樂於將想法轉化為實際可用的網站，期望持續挑戰並提升自我。
-
                     </p>
+
+                    <a href="https://drive.google.com/file/d/1l-ejB-gJ14yTC1WQhWbsBcvr1bI-KK_A/view?usp=drive_link"
+                        class="btn btn--primary" target="_blank">我的履歷</a>
+
                 </div> <!--end column -->
 
             </div> <!-- end s-about__content-end -->
