chore: lazy-load gallery images + exclude from SW precache; bump SW cache version

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                     </div>
 
                     <figure class="about-pic-primary">
-                        <img src="./images/HO-67.png" alt="author-pic">
+                        <img src="./images/HO-67.png" alt="author-pic" loading="lazy">
                     </figure>
 
                 </div> <!-- end s-about__content-start -->
@@ -389,7 +389,7 @@
                         <!-- Visible Content -->
                         <div class="gallery-item__visible-content">
                             <div class="gallery-item__image-wrap">
-                                <img src="images/gallery/SANVIA.png" alt="SANVIA">
+                                <img src="images/gallery/SANVIA.png" alt="SANVIA" loading="lazy">
                             </div>
                             <div class="gallery-item__static-title">
                                 <h4>SANVIA - 情緒虛擬商品平台</h4>
@@ -419,7 +419,7 @@
                         <!-- Visible Content -->
                         <div class="gallery-item__visible-content">
                             <div class="gallery-item__image-wrap">
-                                <img src="images/gallery/NovelSpotlight.png" alt="NovelSpotlight">
+                                <img src="images/gallery/NovelSpotlight.png" alt="NovelSpotlight" loading="lazy">
                             </div>
                             <div class="gallery-item__static-title">
                                 <h4>文輕小站 - 功能介紹網頁</h4>
@@ -447,7 +447,7 @@
                         <!-- Visible Content -->
                         <div class="gallery-item__visible-content">
                             <div class="gallery-item__image-wrap">
-                                <img src="images/gallery/Office Blackjack.png" alt="Office Blackjack">
+                                <img src="images/gallery/Office Blackjack.png" alt="Office Blackjack" loading="lazy">
                             </div>
                             <div class="gallery-item__static-title">
                                 <h4>職場 21 點 - 翻牌點擊遊戲</h4>
@@ -477,7 +477,7 @@
                         <!-- Visible Content -->
                         <div class="gallery-item__visible-content">
                             <div class="gallery-item__image-wrap">
-                                <img src="images/gallery/CuteClock.png" alt="CuteClock">
+                                <img src="images/gallery/CuteClock.png" alt="CuteClock" loading="lazy">
                             </div>
                             <div class="gallery-item__static-title">
                                 <h4>可愛數字鐘 - JS 練習</h4>
@@ -505,7 +505,7 @@
                         <!-- Visible Content -->
                         <div class="gallery-item__visible-content">
                             <div class="gallery-item__image-wrap">
-                                <img src="images/gallery/Color Picker.png" alt="Color Picker">
+                                <img src="images/gallery/Color Picker.png" alt="Color Picker" loading="lazy">
                             </div>
                             <div class="gallery-item__static-title">
                                 <h4>顏色選擇器 - JS 練習</h4>
@@ -533,7 +533,7 @@
                         <!-- Visible Content -->
                         <div class="gallery-item__visible-content">
                             <div class="gallery-item__image-wrap">
-                                <img src="images/gallery/Pomodoro-Timer-2025.png" alt="Pomodoro-Timer-2025">
+                                <img src="images/gallery/Pomodoro-Timer-2025.png" alt="Pomodoro-Timer-2025" loading="lazy">
                             </div>
                             <div class="gallery-item__static-title">
                                 <h4>番茄鐘 - Vuetify 練習</h4>
