--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://ho-67.github.io/">
 
-    <title>Ho-67's Portfolio</title>
+    <title>Ho-67's Profile</title>
 
     <script>
         document.documentElement.classList.remove('no-js');
@@ -71,7 +71,7 @@
                 <div class="s-header__block">
                     <div class="header-logo">
                         <a class="logo" href="index.html">
-                            Portfolio
+                            Ho-67
                         </a>
                     </div>
                     <a class="header-menu-toggle" href="#0"><span>Menu</span></a>
@@ -533,7 +533,8 @@
                         <!-- Visible Content -->
                         <div class="gallery-item__visible-content">
                             <div class="gallery-item__image-wrap">
-                                <img src="images/gallery/Pomodoro-Timer-2025.png" alt="Pomodoro-Timer-2025" loading="lazy">
+                                <img src="images/gallery/Pomodoro-Timer-2025.png" alt="Pomodoro-Timer-2025"
+                                    loading="lazy">
                             </div>
                             <div class="gallery-item__static-title">
                                 <h4>番茄鐘 - Vuetify 練習</h4>
