--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://ho-67.github.io/">
 
-    <title>Ho-67's Profile</title>
+    <title>Ho-67's Protfolio</title>
 
     <script>
         document.documentElement.classList.remove('no-js');
